--- a/classtopper.html
+++ b/classtopper.html
@@ -5,179 +5,212 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Class Topper Certificate</title>
 
-<!-- Google Fonts -->
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
 
 <style>
-  body {
-    background: #f0f4ff;
-    margin: 0;
-    padding: 20px;
-    font-family: "Poppins", sans-serif;
-  }
+body {
+  background: linear-gradient(135deg,#f0f8ff,#dff6f7);
+  font-family: 'Poppins', sans-serif;
+  margin: 0;
+  padding: 20px;
+}
 
-  .certificate {
-    width: 100%;
-    max-width: 900px;
-    margin: auto;
-    background: white;
-    padding: 40px;
-    border-radius: 18px;
-    position: relative;
+.certificate {
+  max-width: 900px;
+  margin: auto;
+  background: linear-gradient(to bottom, #fffdf7 0%, #f7f3ec 100%);
+  border: 15px solid;
+  border-image: linear-gradient(to right, #0b5ed7, #ffd700) 1;
+  border-radius: 25px;
+  padding: 60px;
+  position: relative;
+  box-shadow: 0 20px 50px rgba(0,0,0,0.3);
+  overflow: hidden;
+}
 
-    border: 12px solid #0b5ed7;
-    background-image: linear-gradient(white, white),
-                      repeating-linear-gradient(45deg,#ffd700,#ffd700 10px,#fff 10px,#fff 20px);
-    background-origin: padding-box, border-box;
-    background-clip: padding-box, border-box;
-    box-shadow: 0 10px 25px rgba(0,0,0,0.15);
-  }
+.certificate::before, .certificate::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 20px;
+  left: 0;
+  background: repeating-linear-gradient(45deg, #ffd700, #ffd700 15px, #0b5ed7 15px, #0b5ed7 30px);
+  border-radius: 25px;
+}
 
-  .bismillah {
-    text-align: center;
-    font-size: 2rem;
-    margin-bottom: 10px;
-    font-family: "Scheherazade New", serif;
-    color: #0b5ed7;
-  }
+.certificate::before { top: 0; }
+.certificate::after { bottom: 0; }
 
-  .title {
-    text-align: center;
-    color: #0b5ed7;
-    font-size: 2rem;
-    font-weight: 700;
-    margin: 5px 0 20px 0;
-  }
+.bismillah {
+  font-family: 'Scheherazade New', serif;
+  font-size: 2rem;
+  text-align: center;
+  color: #0b5ed7;
+  margin-bottom: 10px;
+  text-shadow: 2px 2px 4px #ffd700;
+}
 
-  .subtitle {
-    text-align: center;
-    font-size: 1rem;
-    margin-bottom: 30px;
-    color: #333;
-  }
+.title-banner {
+  text-align: center;
+  background: linear-gradient(135deg,#ffd700,#0b5ed7);
+  color: #fff;
+  font-size: 2.2rem;
+  font-weight: 700;
+  padding: 15px 0;
+  border-radius: 15px;
+  margin-bottom: 20px;
+  box-shadow: 0 6px 15px rgba(0,0,0,0.3);
+  letter-spacing: 2px;
+  text-shadow: 2px 2px 4px rgba(0,0,0,0.3);
+}
 
-  .photo-qr-box {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 40px;
-    margin-bottom: 30px;
-    flex-wrap: wrap;
-  }
+.subtitle {
+  text-align: center;
+  font-size: 1.2rem;
+  margin-bottom: 30px;
+  color: #333;
+}
 
-  .photo-box img, .qr-box canvas {
-    border-radius: 50%;
-    width: 160px;
-    height: 160px;
-    border: 6px solid #0b5ed7;
-    background: white;
-    object-fit: cover;
-  }
+.photo-qr-box {
+  display: flex;
+  justify-content: center;
+  gap: 50px;
+  flex-wrap: wrap;
+  margin-bottom: 30px;
+}
 
-  .details {
-    text-align: center;
-    margin-bottom: 30px;
-  }
+.photo-box img, .qr-box canvas {
+  width: 180px;
+  height: 180px;
+  border-radius: 50%;
+  border: 6px solid #ffd700;
+  object-fit: cover;
+  background: white;
+  box-shadow: 0 5px 20px rgba(0,0,0,0.4);
+}
 
-  .details h3 {
-    margin: 8px 0;
-    font-size: 1.4rem;
-    color: #0b5ed7;
-  }
+.details {
+  text-align: center;
+  margin-bottom: 40px;
+}
 
-  .details p {
-    margin: 4px 0;
-    font-size: 1rem;
-    color: #333;
-  }
+.details h3 {
+  font-size: 2rem;
+  color: #ffd700;
+  margin-bottom: 10px;
+  text-shadow: 0 0 10px #ffd700, 2px 2px 5px rgba(0,0,0,0.3);
+}
 
-  .signature-box {
-    text-align: right;
-    margin-top: 50px;
-    padding-right: 40px;
-  }
+.details p {
+  font-size: 1.1rem;
+  color: #333;
+  margin: 5px 0;
+}
 
-  .signature {
-    width: 200px;
-    opacity: 0;
-    animation: signDraw 2.5s ease forwards;
-  }
+.signature-box {
+  text-align: right;
+  margin-top: 60px;
+  padding-right: 50px;
+}
 
-  @keyframes signDraw {
-    0% { opacity: 0; filter: blur(8px); transform: translateY(10px); }
-    60% { opacity: 1; filter: blur(0); transform: translateY(0); }
-    100% { opacity: 1; }
-  }
+.signature {
+  width: 220px;
+  opacity: 0;
+  animation: signDraw 2.5s ease forwards;
+}
 
-  .principal-name {
-    font-weight: 600;
-    margin-top: 5px;
-    color: #0b5ed7;
-  }
+.principal-name {
+  font-weight: 600;
+  color: #0b5ed7;
+  margin-top: 5px;
+}
 
-  .principal-title {
-    font-size: 0.9rem;
-  }
+.principal-title {
+  font-size: 0.9rem;
+  color: #333;
+}
 
-  .medal {
-    width: 100px;
-    position: absolute;
-    top: -30px;
-    left: 50%;
-    transform: translateX(-50%) rotate(0deg);
-    animation: spinMedal 3s linear infinite;
-  }
+.medal {
+  width: 120px;
+  position: absolute;
+  top: -50px;
+  left: 50%;
+  transform: translateX(-50%) rotate(0deg);
+  animation: spinMedal 3s linear infinite;
+  filter: drop-shadow(0 0 10px #ffd700);
+}
 
-  @keyframes spinMedal {
-    0% { transform: translateX(-50%) rotate(0deg); }
-    100% { transform: translateX(-50%) rotate(360deg); }
-  }
+.ribbon {
+  position: absolute;
+  top: -20px;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 250px;
+  height: 80px;
+  background: linear-gradient(135deg,#ffd700,#0b5ed7);
+  border-radius: 15px;
+  z-index: -1;
+  box-shadow: 0 0 20px rgba(255,215,0,0.6);
+}
 
-  #confetti-canvas {
-    position: fixed;
-    top:0;
-    left:0;
-    width: 100%;
-    height: 100%;
-    pointer-events: none;
-    z-index: 9999;
-  }
+@keyframes spinMedal {
+  0% { transform: translateX(-50%) rotate(0deg); }
+  100% { transform: translateX(-50%) rotate(360deg); }
+}
 
-  .download-btn {
-    display: block;
-    margin: 25px auto 0;
-    background: #0b5ed7;
-    color: #fff;
-    padding: 12px 25px;
-    border: none;
-    border-radius: 8px;
-    font-size: 1rem;
-    cursor: pointer;
-    transition: 0.3s;
-  }
+@keyframes signDraw {
+  0% { opacity: 0; filter: blur(8px); transform: translateY(10px); }
+  60% { opacity: 1; filter: blur(0); transform: translateY(0); }
+  100% { opacity: 1; }
+}
 
-  .download-btn:hover {
-    background: #084298;
-  }
+#confetti-canvas {
+  position: fixed;
+  top:0;
+  left:0;
+  width: 100%;
+  height: 100%;
+  pointer-events: none;
+  z-index: 9999;
+}
 
-  @media(max-width: 600px) {
-    .certificate { padding: 25px; }
-    .title { font-size: 1.6rem; }
-    .medal { width: 70px; top: -20px; }
-    .photo-qr-box { gap: 20px; }
-  }
+.download-btn {
+  display: block;
+  margin: 30px auto 0;
+  background: #ffd700;
+  color: #0b5ed7;
+  padding: 15px 35px;
+  border: none;
+  border-radius: 15px;
+  font-size: 1.2rem;
+  font-weight: 600;
+  cursor: pointer;
+  transition: 0.3s;
+  box-shadow: 0 5px 15px rgba(0,0,0,0.3);
+}
+
+.download-btn:hover {
+  background: #e6c200;
+}
+
+@media(max-width: 600px) {
+  .certificate { padding: 40px; }
+  .title-banner { font-size: 1.8rem; }
+  .photo-qr-box { gap: 20px; }
+  .medal { width: 90px; top: -40px; }
+}
 </style>
 </head>
 
 <body>
-
 <canvas id="confetti-canvas"></canvas>
 
 <div class="certificate">
+  <div class="ribbon"></div>
   <img src="medal.png" class="medal" alt="Medal">
 
   <div class="bismillah">بِسْمِ اللَّهِ الرَّحْمَنِ الرَّحِيمِ</div>
-  <div class="title">CLASS TOPPER CERTIFICATE</div>
+  <div class="title-banner">CLASS TOPPER CERTIFICATE</div>
   <div class="subtitle">This certificate is proudly awarded to</div>
 
   <div class="photo-qr-box">
@@ -205,38 +238,32 @@
 
 <button class="download-btn" onclick="downloadCertificate()">Download as PNG</button>
 
-<!-- Scripts -->
 <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/qrious@4.0.2/dist/qrious.min.js"></script>
 
 <script>
-  // Confetti on load
-  window.onload = () => {
-    confetti({ particleCount: 150, spread: 70, origin: { y: 0.3 } });
+window.onload = () => {
+  confetti({ particleCount: 250, spread: 100, origin: { y: 0.3 } });
 
-    // QR code generation
-    const qr = new QRious({
-      element: document.getElementById('qrcode'),
-      value: 'https://noorussalam.edu/student/123', // Student unique link or ID
-      size: 160,
-      background: 'white',
-      foreground: '#0b5ed7',
-      level: 'H'
-    });
-  };
+  const qr = new QRious({
+    element: document.getElementById('qrcode'),
+    value: 'https://noorussalam.edu/student/123', 
+    size: 180,
+    background: 'white',
+    foreground: '#0b5ed7',
+    level: 'H'
+  });
+};
 
-  // Download certificate as PNG
-  function downloadCertificate() {
-    const certificate = document.querySelector('.certificate');
-    html2canvas(certificate).then(canvas => {
-      const link = document.createElement('a');
-      link.download = 'certificate.png';
-      link.href = canvas.toDataURL('image/png');
-      link.click();
-    });
-  }
+function downloadCertificate() {
+  html2canvas(document.querySelector('.certificate')).then(canvas => {
+    const link = document.createElement('a');
+    link.download = 'certificate.png';
+    link.href = canvas.toDataURL('image/png');
+    link.click();
+  });
+}
 </script>
-
 </body>
 </html>
