--- a/toppers.html
+++ b/toppers.html
@@ -69,7 +69,7 @@ footer{text-align:center;color:#345;margin-top:18px;font-size:14px;}
 <i id="downloadIcon" class="fa fa-download"></i>
 
 <script>
-const CERT_BG = "https://i.ibb.co/NgLbwbKN/TOPPER.jpg";
+const CERT_BG = "https://i.ibb.co/fVVycrGh/TOPPER.jpg";
 const toppers = [
   { class: "1", name: "Ayesha Rahman", mark: "498 / 500" },
   { class: "2", name: "Muhammed Shahid", mark: "493 / 500" },
