--- a/toppers.html
+++ b/toppers.html
@@ -53,7 +53,7 @@ footer{text-align:center;color:#345;margin-top:18px;font-size:14px;}
   </header>
 
   <div id="grid" class="grid"></div>
-  <footer>© Noorussalam Madrasa — Auto-date added to certificate</footer>
+  <footer>© Noorussalam Madrasa — All rights reserved</footer>
 </div>
 
 <!-- Modal -->
