--- a/index.html
+++ b/index.html
@@ -1045,7 +1045,7 @@
   <div class="container">
     <div class="row gy-4 align-items-center">
       <div class="col-md-6" data-aos="fade-right">
-        <h2 class="fw-bold mb-3">About Madrasa</h2>
+        <h2 class="fw-bold mb-3 malayalam">About Madrasa</h2>
         <p class="malayalam" style="text-align: justify;">
           മലപ്പുറം ജില്ലയിലെ കരുവാരകുണ്ട് പശ്ചിമഘട്ട താഴ്വരയുടെ മടിത്തട്ടിൽ, താളാത്മകമായൊഴുകുന്ന കല്ലൻപുഴയുടെ തീരത്ത് സ്ഥിതിചെയ്യുന്ന പ്രകൃതിരമണീയമായ ഗ്രാമമാണ് മഞ്ഞൾപ്പാറ. 
           കർഷകരും തോട്ടം തൊഴിലാളികളും തിങ്ങിപ്പാർക്കുന്ന ഈ ഗ്രാമത്തിന് അതിന്റെ പേര് ലഭിച്ചത് ചരിത്രത്തിൽ ഇടംനേടിയ ഒരു നിർമ്മിതിയിൽ നിന്നാണ്. 
@@ -1063,6 +1063,7 @@
     </div>
   </div>
 </section>
+
   
   <!-- PRINCIPAL MESSAGE SECTION -->
 <section class="principal-section py-5">
@@ -1522,6 +1523,7 @@
 
 </body>
 </html>
+
 
 
 
