--- a/index.html
+++ b/index.html
@@ -1041,53 +1041,207 @@
 </style>
 
 <!-- ABOUT -->
-<section id="about" class="py-5">
+<!-- ABOUT SECTION -->
+<section id="about" class="about-section py-5">
+
+  <!-- Floating Bubbles -->
+  <div class="bubble-container">
+    <div class="bubble"></div>
+    <div class="bubble"></div>
+    <div class="bubble"></div>
+    <div class="bubble"></div>
+    <div class="bubble"></div>
+    <div class="bubble"></div>
+    <div class="bubble"></div>
+    <div class="bubble"></div>
+    <div class="bubble"></div>
+  </div>
+
   <div class="container">
     <div class="row gy-4 align-items-center">
+
+      <!-- LEFT TEXT -->
       <div class="col-md-6" data-aos="fade-right">
-        <h2 class="fw-bold mb-3 malayalam">About Madrasa</h2>
-        <p class="malayalam" style="text-align: justify;">
+
+        <!-- Decorative Title -->
+        <div class="decorated-title mb-3">
+          <span class="line"></span>
+          <h2 class="fw-bold malayalam mx-3">About Madrasa</h2>
+          <span class="line"></span>
+        </div>
+
+        <p class="malayalam about-text">
           മലപ്പുറം ജില്ലയിലെ കരുവാരകുണ്ട് പശ്ചിമഘട്ട താഴ്വരയുടെ മടിത്തട്ടിൽ, താളാത്മകമായൊഴുകുന്ന കല്ലൻപുഴയുടെ തീരത്ത് സ്ഥിതിചെയ്യുന്ന പ്രകൃതിരമണീയമായ ഗ്രാമമാണ് മഞ്ഞൾപ്പാറ. 
           കർഷകരും തോട്ടം തൊഴിലാളികളും തിങ്ങിപ്പാർക്കുന്ന ഈ ഗ്രാമത്തിന് അതിന്റെ പേര് ലഭിച്ചത് ചരിത്രത്തിൽ ഇടംനേടിയ ഒരു നിർമ്മിതിയിൽ നിന്നാണ്. 
-          ബ്രിട്ടീഷ് കാലത്ത്, പുഴയുടെ ഇരുകരകളെയും ബന്ധിപ്പിക്കാൻ വേണ്ടി സ്ഥാപിച്ച കമ്പികൊണ്ടുള്ള തൂക്കുപാലം (കമ്പിപ്പാലം) ഒരു കാലത്ത് ഈ പ്രദേശത്തിന്റെ ജീവനാഡിയായിരുന്നു; 
+          ബ്രിട്ടീഷ് കാലത്ത് പുഴയുടെ ഇരുകരകളെയും ബന്ധിപ്പിക്കാൻ സ്ഥാപിച്ച കമ്പികൊണ്ടുള്ള തൂക്കുപാലം (കമ്പിപ്പാലം) ഒരു കാലത്ത് ഈ പ്രദേശത്തിന്റെ ജീവനാഡിയായിരുന്നു; 
           എന്നാൽ ആ ചരിത്രപരമായ പാലം ഇന്ന് മാഞ്ഞുപോയിരിക്കുന്നു. 
-          സാമൂഹിക ജീവിതത്തോടൊപ്പം മതവിജ്ഞാന പ്രചാരണത്തിനും മഞ്ഞൾപ്പാറ എന്നും ഫലഭൂയിഷ്ഠമായ മണ്ണാണ് നൽകിയത്. 
+          സാമൂഹിക ജീവിതത്തോടൊപ്പം മതവിജ്ഞാന പ്രചാരണത്തിനും മഞ്ഞൾപ്പാറ എന്നും ഫലഭൂയിഷ്ഠമായ മണ്ണാണ് നൽകിയിരിക്കുന്നത്. 
           ഈ പാരമ്പര്യത്തിന്റെ പ്രതീകമാണ് മഹല്ലിലെ നൂറുസ്സലാം മദ്‌റസ. 
           നാട്ടുകാരുടെ കൂട്ടായ പരിശ്രമത്തിന്റെ ഫലമായി 1989-ൽ മർഹൂം കെ. പി. കുഞ്ഞാപ്പു മുസ്ലിയാർ ശിലയിട്ട ഈ സ്ഥാപനം, അതേ വർഷം മർഹൂം കെ. ടി. ഉസ്താദിന്റെ നേതൃത്വത്തിൽ ഉദ്ഘാടനം ചെയ്യപ്പെട്ടു. 
-          തുടർന്ന് 10.06.1989-ന് സമസ്ത കേരള ഇസ്‌ലാം മത വിദ്യാഭ്യാസ ബോർഡിന്റെ 6110-ാം നമ്പറായി അംഗീകാരം നേടിയ ഈ മദ്‌റസയുടെ ആദ്യ ഉസ്താദുമാർ മർഹൂം പി. ഇസ്‌മായിൽ മുസ്ലിയാർ, സി. അബ്ദുന്നാസർ മുസ്ലിയാർ എന്നിവരായിരുന്നു.
+          തുടർന്ന് 10.06.1989-ന് സമസ്ത കേരള ഇസ്‌ലാം മത വിദ്യാഭ്യാസ ബോർഡിന്റെ 6110-ാം നമ്പറായി അംഗീകാരം നേടി. 
+          ഈ മദ്‌റസയുടെ ആദ്യ ഉസ്താദുമാർ മർഹൂം പി. ഇസ്‌മായിൽ മുസ്ലിയാർ, സി. അബ്ദുന്നാസർ മുസ്ലിയാർ എന്നിവരായിരുന്നു.
         </p>
+
       </div>
+
+      <!-- RIGHT IMAGE -->
       <div class="col-md-6 text-center" data-aos="fade-left">
-        <img src="https://i.ibb.co/bMLmpL7d/unnamed.jpg" alt="students" class="img-fluid shadow-lg">
+        <div class="image-wrapper">
+          <img src="https://i.ibb.co/bMLmpL7d/unnamed.jpg" 
+               alt="students" 
+               class="img-fluid about-img shadow-lg">
+        </div>
       </div>
+
     </div>
   </div>
 </section>
 
+<!-- ABOUT SECTION CSS -->
+<style>
+/* Malayalam Font */
+.malayalam {
+  font-family: 'Anek Malayalam', sans-serif !important;
+}
+
+/* Soft Background Pattern */
+.about-section {
+  background: #f7f9fc;
+  background-image: radial-gradient(#dcdcdc 1px, transparent 1px);
+  background-size: 18px 18px;
+  padding: 60px 0;
+  position: relative;
+  overflow: hidden;
+}
+
+/* Decorative Title */
+.decorated-title {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.decorated-title .line {
+  flex: 1;
+  height: 3px;
+  background: linear-gradient(90deg, #007bff, #00c6ff);
+  animation: glow 2s infinite alternate;
+  border-radius: 10px;
+}
+.decorated-title h2 {
+  font-size: 28px;
+  font-weight: 700;
+  color: #004aad;
+}
+
+/* Glow Animation */
+@keyframes glow {
+  0% { opacity: 0.4; }
+  100% { opacity: 1; }
+}
+
+/* Malayalam Paragraph */
+.about-text {
+  text-align: justify;
+  font-size: 17px;
+  line-height: 1.78;
+  color: #333;
+}
+
+/* Image Hover Effect */
+.image-wrapper {
+  display: inline-block;
+  border-radius: 12px;
+  transition: 0.35s;
+}
+.image-wrapper:hover {
+  transform: scale(1.03);
+  box-shadow: 0 8px 35px rgba(0, 128, 255, 0.35);
+}
+.about-img {
+  border-radius: 12px;
+}
+
+/* Floating Bubbles */
+.bubble-container {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  pointer-events: none;
+  z-index: 1;
+}
+
+.bubble {
+  position: absolute;
+  bottom: -120px;
+  width: 20px;
+  height: 20px;
+  background: rgba(0, 123, 255, 0.15);
+  border-radius: 50%;
+  animation: floatBubble 10s infinite ease-in;
+}
+
+/* Random bubble sizes + speeds */
+.bubble:nth-child(1) { left: 10%; width: 25px; height: 25px; animation-duration: 12s; }
+.bubble:nth-child(2) { left: 25%; width: 18px; height: 18px; animation-duration: 9s; }
+.bubble:nth-child(3) { left: 40%; width: 30px; height: 30px; animation-duration: 14s; }
+.bubble:nth-child(4) { left: 55%; width: 20px; height: 20px; animation-duration: 10s; }
+.bubble:nth-child(5) { left: 70%; width: 22px; height: 22px; animation-duration: 11s; }
+.bubble:nth-child(6) { left: 85%; width: 15px; height: 15px; animation-duration: 8s; }
+.bubble:nth-child(7) { left: 50%; width: 40px; height: 40px; animation-duration: 16s; }
+.bubble:nth-child(8) { left: 30%; width: 12px; height: 12px; animation-duration: 7s; }
+.bubble:nth-child(9) { left: 90%; width: 28px; height: 28px; animation-duration: 13s; }
+
+/* Bubble Animation */
+@keyframes floatBubble {
+  0% {
+    transform: translateY(0) scale(1);
+    opacity: 0.4;
+  }
+  50% {
+    opacity: 0.8;
+  }
+  100% {
+    transform: translateY(-900px) scale(1.3);
+    opacity: 0;
+  }
+}
+</style>
+
   
-  <!-- PRINCIPAL MESSAGE SECTION -->
+<!-- PRINCIPAL MESSAGE SECTION -->
 <section class="principal-section py-5">
-  <div class="container">
+  <div class="bg-pattern"></div>
+  <div class="floating-particles"></div>
+
+  <div class="container position-relative">
 
     <!-- Quran Verse -->
-    <div class="text-center mb-4">
-      <h5 class="quran-text">
-         ﴾رَبِّ زِدْنِي عِلْمًا﴿   
+    <div class="text-center mb-4 animated-lines">
+      <div class="decor-line left-line"></div>
+      <h5 class="quran-text mb-2">
+        ﴾ رَبِّ زِدْنِي عِلْمًا ﴿
       </h5>
+      <div class="decor-line right-line"></div>
+
       <p class="quran-translation">"My Lord, increase me in knowledge." (Qur'an 20:114)</p>
     </div>
 
-    <div class="row align-items-center g-4 principal-box">
+    <div class="row align-items-center g-4 principal-box hover-box">
 
       <!-- Principal Photo -->
       <div class="col-md-4 text-center">
-        <img src="principal.jpg" alt="Principal"
-          class="img-fluid rounded-circle shadow-sm principal-photo">
+        <div class="photo-frame hover-photo">
+          <img src="principal.jpg" alt="Principal"
+            class="img-fluid rounded-circle shadow-lg principal-photo">
+        </div>
       </div>
 
       <!-- Principal Message -->
       <div class="col-md-8">
-        <h2 class="section-title mb-3">Swadar Muallim’s Message</h2>
+        <h2 class="section-title mb-3 glow-title">Swadar Muallim’s Message</h2>
 
         <p class="principal-text">
           Assalamu Alaikum Warahmatullahi Wabarakatuh.
@@ -1097,16 +1251,17 @@
           nurture students who are academically strong, spiritually grounded, and
           socially responsible.
           <br><br>
-          With Allah’s grace and the support of our teachers and parents, we
-          strive to build a bright future for every learner who steps into our
-          institution.
+          With Allah’s grace and the support of our respected teachers and
+          dedicated parents, we strive to build a bright future for every learner
+          who steps into our institution.
         </p>
 
         <!-- Signature Section -->
-        <div class="signature-box mt-4">
-          <img src="https://i.ibb.co/Pv428hz9/Whats-App-Image-2025-11-26-at-11-41-41-AM-removebg-preview.png" alt="Signature" class="signature animated-signature">
+        <div class="signature-box mt-4 text-start shimmer-effect">
+          <img src="https://i.ibb.co/Pv428hz9/Whats-App-Image-2025-11-26-at-11-41-41-AM-removebg-preview.png"
+               alt="Signature" class="signature animated-signature mb-1">
           <p class="mb-0"><strong>Swadar</strong></p>
-          <small>Swadar Muallim — Noorussalam Madrasa</small>
+          <small class="text-muted">Swadar Muallim — Noorussalam Madrasa</small>
         </div>
       </div>
 
@@ -1114,91 +1269,178 @@
   </div>
 </section>
 
+
 <style>
-/* Gradient Background */
+/* SOFT ARABIC BACKGROUND PATTERN */
+.bg-pattern {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url('https://i.ibb.co/DbdR3rq/islamic-pattern.png');
+  opacity: 0.08;
+  pointer-events: none;
+}
+
+/* Floating Particles */
+.floating-particles::before,
+.floating-particles::after {
+  content: "";
+  position: absolute;
+  width: 6px;
+  height: 6px;
+  background: #ffd700;
+  border-radius: 50%;
+  animation: floatParticle 6s infinite ease-in-out;
+}
+
+.floating-particles::after {
+  left: 80%;
+  top: 30%;
+  animation-duration: 7s;
+}
+
+@keyframes floatParticle {
+  0% { transform: translateY(0); opacity: 0.4; }
+  50% { transform: translateY(-25px); opacity: 1; }
+  100% { transform: translateY(0); opacity: 0.4; }
+}
+
+/* Section Background */
 .principal-section {
-  background: linear-gradient(135deg, #e6f1ff, #cfe7ff);
+  background: linear-gradient(135deg, #d9e9ff, #f1f7ff);
+  position: relative;
+  overflow: hidden;
 }
 
 /* Quran Verse */
 .quran-text {
-  font-size: 2rem;
+  font-size: 2.2rem;
   font-weight: 700;
-  color: #0b5ed7;
+  color: #0a3d91;
   font-family: "Scheherazade New", serif;
-}
-.quran-translation {
-  font-size: 0.95rem;
-  color: #333;
+  text-shadow: 0px 0px 10px rgba(0,0,0,0.1);
 }
 
-/* Blue Border Box */
+/* Decorative Animated Lines */
+.decor-line {
+  width: 70px;
+  height: 3px;
+  background: linear-gradient(90deg, #d4af37, #ffeb93);
+  border-radius: 5px;
+  animation: shine 3s infinite linear;
+}
+
+.left-line { margin: 0 auto 10px auto; }
+.right-line { margin: 10px auto 0 auto; }
+
+@keyframes shine {
+  0% { opacity: 0.5; width: 50px; }
+  50% { opacity: 1; width: 80px; }
+  100% { opacity: 0.5; width: 50px; }
+}
+
+/* Blue–Gold Premium Box */
 .principal-box {
   border: 3px solid #0b5ed7;
-  border-radius: 20px;
-  padding: 20px;
-  background: white;
-  box-shadow: 0 4px 20px rgba(0,0,0,0.08);
+  border-radius: 25px;
+  padding: 35px;
+  background: #ffffffee;
+  box-shadow: 0 10px 30px rgba(0,0,0,0.10);
+  position: relative;
+  transition: 0.4s ease;
 }
 
-/* Heading */
-.section-title {
-  font-weight: 700;
-  color: #0b5ed7;
-  font-size: 1.8rem;
+.hover-box:hover {
+  transform: translateY(-8px);
+  box-shadow: 0 15px 40px rgba(0,0,0,0.15);
+}
+
+/* Photo Frame Hover Glow */
+.photo-frame {
+  padding: 8px;
+  border-radius: 50%;
+  background: linear-gradient(135deg, #0b5ed7, #4aa8ff);
+  transition: 0.4s ease;
+}
+
+.hover-photo:hover {
+  box-shadow: 0 0 20px rgba(0,123,255,0.5);
+  transform: scale(1.03);
 }
 
 /* Principal Photo */
 .principal-photo {
-  width: 230px;
-  height: 230px;
+  width: 240px;
+  height: 240px;
   object-fit: cover;
+  border-radius: 50%;
   border: 8px solid #ffffff;
   animation: float 4s ease-in-out infinite;
 }
 
-/* Message */
-.principal-text {
-  font-size: 1rem;
-  line-height: 1.7;
-  color: #333;
+/* Floating Animation */
+@keyframes float {
+  0% { transform: translateY(0); }
+  50% { transform: translateY(-10px); }
+  100% { transform: translateY(0); }
 }
 
-/* Signature Animation */
+/* Glow Title */
+.glow-title {
+  text-shadow: 0 0 12px rgba(0,110,255,0.25);
+}
+
+/* Signature Shine Effect */
+.shimmer-effect {
+  position: relative;
+}
+
+.shimmer-effect::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: -150px;
+  width: 80px;
+  height: 100%;
+  background: linear-gradient(120deg, transparent, #ffffff88, transparent);
+  transform: skewX(-25deg);
+  animation: shimmer 2.5s infinite;
+}
+
+@keyframes shimmer {
+  0% { left: -150px; }
+  100% { left: 150%; }
+}
+
+/* Signature animation */
 .signature {
-  width: 170px;
+  width: 180px;
   opacity: 0;
 }
 
-/* Smooth fade + draw effect */
 .animated-signature {
-  animation: signatureDraw 2.7s ease forwards;
+  animation: signatureDraw 2.4s ease forwards;
 }
 
 @keyframes signatureDraw {
-  0% { opacity: 0; filter: blur(6px); transform: translateY(8px); }
+  0% { opacity: 0; filter: blur(6px); transform: translateY(10px); }
   60% { opacity: 1; filter: blur(0); transform: translateY(0); }
   100% { opacity: 1; }
 }
 
-/* Floating photo effect */
-@keyframes float {
-  0% { transform: translateY(0); }
-  50% { transform: translateY(-8px); }
-  100% { transform: translateY(0); }
-}
-
-/* Responsive Fixes */
+/* Responsive */
 @media (max-width: 576px) {
   .principal-photo {
     width: 180px;
     height: 180px;
   }
   .section-title {
-    font-size: 1.5rem;
+    font-size: 1.6rem;
   }
   .quran-text {
-    font-size: 1.6rem;
+    font-size: 1.7rem;
   }
 }
 </style>
@@ -1523,6 +1765,7 @@
 
 </body>
 </html>
+
 
 
 
