--- a/index.html
+++ b/index.html
@@ -1213,55 +1213,62 @@
   
 <!-- PRINCIPAL MESSAGE SECTION -->
 <section class="principal-section py-5">
-  <div class="bg-pattern"></div>
-  <div class="floating-particles"></div>
 
-  <div class="container position-relative">
+  <!-- Floating Particles -->
+  <div class="particles">
+    <span></span><span></span><span></span><span></span><span></span>
+    <span></span><span></span><span></span><span></span><span></span>
+  </div>
+
+  <!-- Crescent + Stars -->
+  <div class="crescent-star">
+    <div class="crescent"></div>
+    <div class="star star1"></div>
+    <div class="star star2"></div>
+    <div class="star star3"></div>
+  </div>
+
+  <!-- Light sweep -->
+  <div class="light-overlay"></div>
+
+  <div class="container">
 
     <!-- Quran Verse -->
-    <div class="text-center mb-4 animated-lines">
-      <div class="decor-line left-line"></div>
-      <h5 class="quran-text mb-2">
-        ﴾ رَبِّ زِدْنِي عِلْمًا ﴿
-      </h5>
-      <div class="decor-line right-line"></div>
-
+    <div class="text-center mb-4">
+      <h5 class="quran-text">﴾رَبِّ زِدْنِي عِلْمًا﴿</h5>
       <p class="quran-translation">"My Lord, increase me in knowledge." (Qur'an 20:114)</p>
     </div>
 
-    <div class="row align-items-center g-4 principal-box hover-box">
+    <!-- Principal Card -->
+    <div class="principal-card row align-items-center g-4">
 
       <!-- Principal Photo -->
       <div class="col-md-4 text-center">
-        <div class="photo-frame hover-photo">
-          <img src="principal.jpg" alt="Principal"
-            class="img-fluid rounded-circle shadow-lg principal-photo">
+        <div class="photo-frame">
+          <img src="principal.jpg" alt="Principal" class="principal-photo">
+          <div class="gold-ring"></div>
         </div>
       </div>
 
       <!-- Principal Message -->
       <div class="col-md-8">
-        <h2 class="section-title mb-3 glow-title">Swadar Muallim’s Message</h2>
-
+        <h2 class="principal-title">Swadar Muallim’s Message</h2>
         <p class="principal-text">
-          Assalamu Alaikum Warahmatullahi Wabarakatuh.
-          <br><br>
+          Assalamu Alaikum Warahmatullahi Wabarakatuh.<br><br>
           Noorussalam Madrasa continues to lead with excellence in Islamic
           education, moral values, and spiritual development. Our goal is to
           nurture students who are academically strong, spiritually grounded, and
-          socially responsible.
-          <br><br>
-          With Allah’s grace and the support of our respected teachers and
-          dedicated parents, we strive to build a bright future for every learner
-          who steps into our institution.
+          socially responsible.<br><br>
+          With Allah’s grace and the support of our teachers and parents, we
+          strive to build a bright future for every learner.
         </p>
 
-        <!-- Signature Section -->
-        <div class="signature-box mt-4 text-start shimmer-effect">
+        <!-- Signature -->
+        <div class="signature-box mt-4">
           <img src="https://i.ibb.co/Pv428hz9/Whats-App-Image-2025-11-26-at-11-41-41-AM-removebg-preview.png"
-               alt="Signature" class="signature animated-signature mb-1">
+               class="signature animated-signature">
           <p class="mb-0"><strong>Swadar</strong></p>
-          <small class="text-muted">Swadar Muallim — Noorussalam Madrasa</small>
+          <small>Swadar Muallim — Noorussalam Madrasa</small>
         </div>
       </div>
 
@@ -1269,179 +1276,166 @@
   </div>
 </section>
 
-
 <style>
-/* SOFT ARABIC BACKGROUND PATTERN */
-.bg-pattern {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-image: url('https://i.ibb.co/DbdR3rq/islamic-pattern.png');
-  opacity: 0.08;
-  pointer-events: none;
-}
-
-/* Floating Particles */
-.floating-particles::before,
-.floating-particles::after {
-  content: "";
-  position: absolute;
-  width: 6px;
-  height: 6px;
-  background: #ffd700;
-  border-radius: 50%;
-  animation: floatParticle 6s infinite ease-in-out;
-}
-
-.floating-particles::after {
-  left: 80%;
-  top: 30%;
-  animation-duration: 7s;
-}
-
-@keyframes floatParticle {
-  0% { transform: translateY(0); opacity: 0.4; }
-  50% { transform: translateY(-25px); opacity: 1; }
-  100% { transform: translateY(0); opacity: 0.4; }
-}
-
-/* Section Background */
+/* Background */
 .principal-section {
-  background: linear-gradient(135deg, #d9e9ff, #f1f7ff);
   position: relative;
+  background: linear-gradient(135deg, #eef6ff, #dcecff);
   overflow: hidden;
 }
 
-/* Quran Verse */
-.quran-text {
-  font-size: 2.2rem;
-  font-weight: 700;
-  color: #0a3d91;
-  font-family: "Scheherazade New", serif;
-  text-shadow: 0px 0px 10px rgba(0,0,0,0.1);
+/* Light sweep */
+.light-overlay {
+  position: absolute;
+  top: 0; left: -200%;
+  width: 200%;
+  height: 100%;
+  background: linear-gradient(110deg, transparent 40%, rgba(255,255,255,0.6) 50%, transparent 60%);
+  animation: shine 8s infinite;
 }
-
-/* Decorative Animated Lines */
-.decor-line {
-  width: 70px;
-  height: 3px;
-  background: linear-gradient(90deg, #d4af37, #ffeb93);
-  border-radius: 5px;
-  animation: shine 3s infinite linear;
-}
-
-.left-line { margin: 0 auto 10px auto; }
-.right-line { margin: 10px auto 0 auto; }
-
 @keyframes shine {
-  0% { opacity: 0.5; width: 50px; }
-  50% { opacity: 1; width: 80px; }
-  100% { opacity: 0.5; width: 50px; }
+  0% { left: -200%; }
+  100% { left: 200%; }
 }
 
-/* Blue–Gold Premium Box */
-.principal-box {
-  border: 3px solid #0b5ed7;
-  border-radius: 25px;
-  padding: 35px;
-  background: #ffffffee;
-  box-shadow: 0 10px 30px rgba(0,0,0,0.10);
-  position: relative;
-  transition: 0.4s ease;
-}
-
-.hover-box:hover {
-  transform: translateY(-8px);
-  box-shadow: 0 15px 40px rgba(0,0,0,0.15);
-}
-
-/* Photo Frame Hover Glow */
-.photo-frame {
-  padding: 8px;
+/* Floating particles */
+.particles span {
+  position: absolute;
+  width: 6px; height: 6px;
+  background: rgba(255,255,255,0.4);
   border-radius: 50%;
-  background: linear-gradient(135deg, #0b5ed7, #4aa8ff);
-  transition: 0.4s ease;
+  animation: floatParticle 12s infinite ease-in-out;
+}
+.particles span:nth-child(1) { top: 20%; left: 10%; animation-duration: 10s; }
+.particles span:nth-child(2) { top: 60%; left: 30%; animation-duration: 12s; }
+.particles span:nth-child(3) { top: 10%; left: 70%; animation-duration: 14s; }
+.particles span:nth-child(4) { top: 80%; left: 50%; animation-duration: 16s; }
+.particles span:nth-child(5) { top: 40%; left: 90%; animation-duration: 18s; }
+@keyframes floatParticle {
+  0% { transform: translateY(0) scale(1); opacity: 0.3; }
+  50% { opacity: 1; }
+  100% { transform: translateY(-80px) scale(1.6); opacity: 0; }
 }
 
-.hover-photo:hover {
-  box-shadow: 0 0 20px rgba(0,123,255,0.5);
-  transform: scale(1.03);
+/* Crescent + stars */
+.crescent-star {
+  position: absolute;
+  top: 10%; right: 10%;
+  width: 100px; height: 100px;
+  pointer-events: none;
+  z-index: 1;
+}
+.crescent {
+  width: 60px; height: 60px;
+  border-radius: 50%;
+  background: radial-gradient(circle at 20% 20%, #ffd700, transparent);
+  position: absolute;
+  animation: floatCrescent 6s ease-in-out infinite alternate;
+}
+.star {
+  width: 10px; height: 10px;
+  background: #ffd700;
+  clip-path: polygon(50% 0%, 61% 35%, 98% 35%, 68% 57%, 79% 91%, 50% 70%, 21% 91%, 32% 57%, 2% 35%, 39% 35%);
+  position: absolute;
+  animation: floatStar 8s infinite alternate;
+}
+.star1 { top: -10px; left: 70px; animation-delay: 0s; }
+.star2 { top: 40px; left: 50px; animation-delay: 2s; }
+.star3 { top: 20px; left: 80px; animation-delay: 4s; }
+@keyframes floatCrescent {
+  0% { transform: translateY(0) rotate(0deg); }
+  50% { transform: translateY(-15px) rotate(15deg); }
+  100% { transform: translateY(0) rotate(0deg); }
+}
+@keyframes floatStar {
+  0% { transform: translateY(0) scale(1); }
+  50% { transform: translateY(-10px) scale(1.2); }
+  100% { transform: translateY(0) scale(1); }
+}
+
+/* Principal Card Glass + Hover */
+.principal-card {
+  background: rgba(255,255,255,0.55);
+  backdrop-filter: blur(14px);
+  border-radius: 25px;
+  padding: 30px;
+  border: 1.5px solid rgba(255,255,255,0.5);
+  box-shadow: 0 12px 45px rgba(0,0,0,0.15);
+  position: relative;
+  overflow: hidden;
+  transition: transform 0.4s ease, box-shadow 0.4s ease;
+}
+.principal-card:hover {
+  transform: translateY(-5px);
+  box-shadow: 0 18px 60px rgba(0,0,0,0.25);
+}
+
+/* Gradient Animated Title */
+.principal-title {
+  font-size: 2rem;
+  font-weight: 700;
+  background: linear-gradient(90deg, #ffcc33, #ff9933, #ffcc33);
+  background-size: 200% 200%;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  animation: gradientAnim 4s ease infinite;
+}
+@keyframes gradientAnim {
+  0%{background-position:0% 50%}
+  50%{background-position:100% 50%}
+  100%{background-position:0% 50%}
+}
+
+/* Principal Text */
+.principal-text {
+  font-size: 1rem;
+  line-height: 1.7;
+  color: #333;
 }
 
 /* Principal Photo */
+.photo-frame {
+  position: relative;
+  display: inline-block;
+}
 .principal-photo {
-  width: 240px;
-  height: 240px;
+  width: 230px; height: 230px;
   object-fit: cover;
   border-radius: 50%;
-  border: 8px solid #ffffff;
-  animation: float 4s ease-in-out infinite;
+  border: 8px solid white;
+  box-shadow: 0 6px 28px rgba(0,0,0,0.25);
+  animation: floatUpDown 4s ease-in-out infinite;
 }
-
-/* Floating Animation */
-@keyframes float {
-  0% { transform: translateY(0); }
+@keyframes floatUpDown {
+  0%,100% { transform: translateY(0); }
   50% { transform: translateY(-10px); }
-  100% { transform: translateY(0); }
 }
 
-/* Glow Title */
-.glow-title {
-  text-shadow: 0 0 12px rgba(0,110,255,0.25);
-}
-
-/* Signature Shine Effect */
-.shimmer-effect {
-  position: relative;
-}
-
-.shimmer-effect::after {
-  content: "";
+/* Gold Ring */
+.gold-ring {
   position: absolute;
-  top: 0;
-  left: -150px;
-  width: 80px;
-  height: 100%;
-  background: linear-gradient(120deg, transparent, #ffffff88, transparent);
-  transform: skewX(-25deg);
-  animation: shimmer 2.5s infinite;
+  top: -10px; left: -10px;
+  width: 250px; height: 250px;
+  border-radius: 50%;
+  border: 4px dashed rgba(255,215,0,0.7);
+  animation: spin 18s linear infinite;
+}
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
 }
 
-@keyframes shimmer {
-  0% { left: -150px; }
-  100% { left: 150%; }
-}
-
-/* Signature animation */
+/* Signature Animation */
 .signature {
-  width: 180px;
-  opacity: 0;
+  width: 170px; opacity: 0;
 }
-
 .animated-signature {
-  animation: signatureDraw 2.4s ease forwards;
+  animation: fadeInSignature 2.7s ease forwards;
 }
-
-@keyframes signatureDraw {
-  0% { opacity: 0; filter: blur(6px); transform: translateY(10px); }
-  60% { opacity: 1; filter: blur(0); transform: translateY(0); }
-  100% { opacity: 1; }
-}
-
-/* Responsive */
-@media (max-width: 576px) {
-  .principal-photo {
-    width: 180px;
-    height: 180px;
-  }
-  .section-title {
-    font-size: 1.6rem;
-  }
-  .quran-text {
-    font-size: 1.7rem;
-  }
+@keyframes fadeInSignature {
+  0% { opacity:0; filter:blur(6px); transform: translateY(8px); }
+  60% { opacity:1; filter:blur(0); transform: translateY(0); }
+  100% { opacity:1; }
 }
 </style>
 
@@ -1765,6 +1759,7 @@
 
 </body>
 </html>
+
 
 
 
