--- a/index.html
+++ b/index.html
@@ -1245,7 +1245,7 @@
       <!-- Principal Photo -->
       <div class="col-md-4 text-center">
         <div class="photo-frame">
-          <img src="principal.jpg" alt="Principal" class="principal-photo">
+          <img src="https://i.ibb.co/S77QvZ07/Whats-App-Image-2025-10-25-at-8-38-50-AM.jpg" alt="Principal" class="principal-photo">
           <div class="gold-ring"></div>
         </div>
       </div>
@@ -1759,6 +1759,7 @@
 
 </body>
 </html>
+
 
 
 
