--- a/index.html
+++ b/index.html
@@ -816,231 +816,227 @@
 </script>
 <!-- News Ticker END -->
 
-<!-- 🌟 Class Toppers Section -->
-<section id="class-toppers" style="padding:80px 0; background:linear-gradient(135deg,#dce9ff,#ffffff); font-family:'Poppins',sans-serif; overflow:hidden; position:relative;">
+<!-- 🌟 Class Toppers Section – Premium 2.0 -->
+<section id="class-toppers" style="padding:90px 0; background:linear-gradient(145deg,#e8f1ff,#ffffff,#f5f9ff); font-family:'Poppins',sans-serif; overflow:hidden; position:relative;">
 
-  <!-- ✨ Twinkling Star Layers -->
+  <!-- ✨ Enhanced Star Background -->
   <div class="stars"></div>
   <div class="stars2"></div>
   <div class="stars3"></div>
 
-  <div style="max-width:1100px; margin:auto; text-align:center; position:relative; z-index:2;">
-  <h3 style="font-size:1.8rem; color:#004aad; margin-bottom:40px; font-weight:600; letter-spacing:0.5px; font-family:'Poppins', sans-serif; text-align:center;">
-  Class Toppers – Half Yearly Examination 2025-26
-  <div style="width:80px; height:3px; background:#004aad; margin:10px auto; border-radius:2px;"></div>
-  </h3>
+  <!-- ✨ Soft Spotlight -->
+  <div style="position:absolute; top:-80px; left:50%; width:600px; height:600px; transform:translateX(-50%); background:radial-gradient(circle, rgba(255,255,255,0.7), transparent 70%); filter:blur(40px); z-index:0;"></div>
+
+  <div style="max-width:1150px; margin:auto; text-align:center; position:relative; z-index:2;">
+    
+    <!-- 🔥 TITLE BAR -->
+    <h3 style="
+      font-size:2.2rem; 
+      font-weight:700; 
+      color:#004aad; 
+      margin-bottom:25px; 
+      position:relative;">
+      Class Toppers – Half Yearly Examination 2025–26
+    </h3>
+
+    <div style="
+      width:180px;
+      height:6px;
+      margin:0 auto 50px;
+      background:linear-gradient(90deg,#004aad,#0099ff,#66ccff,#004aad);
+      border-radius:50px;
+      animation:shineBar 4s infinite linear;
+    "></div>
+
+    <!-- 🔥 Infinite Scroll -->
     <div class="topper-scroll">
       <div class="scroll-track">
-        
-        <!-- 🔹 Class toppers -->
-        <div class="topper-card"><h3>Class 1</h3><p>Azim Faizan</p><span>100%</span></div>
-        <div class="topper-card"><h3>Class 1</h3><p>Amana Fathima</p><span>100%</span></div>
-        <div class="topper-card"><h3>Class 1</h3><p>Nasha Mehrin</p><span>100%</span></div>
-        <div class="topper-card"><h3>Class 1</h3><p>Ayisha Ridha</p><span>100%</span></div>
-        <div class="topper-card"><h3>Class 1</h3><p>Ayisha Zahra</p><span>100%</span></div>
-        <div class="topper-card"><h3>Class 2</h3><p>Hina Mehrin TK</p><span>97%</span></div>
-        <div class="topper-card"><h3>Class 3</h3><p>Naba Fathima V</p><span>94%</span></div>
-        <div class="topper-card"><h3>Class 4</h3><p>Isha Mehrin AK</p><span>99%</span></div>
-        <div class="topper-card"><h3>Class 5</h3><p>Emin Yash</p><span>88%</span></div>
-        <div class="topper-card"><h3>Class 6</h3><p>Sanha M</p><span>93%</span></div>
-        <div class="topper-card"><h3>Class 7</h3><p>Fidha KT</p><span>86%</span></div>
-        <div class="topper-card"><h3>Class 8</h3><p>Nidha Fathima KP</p><span>82%</span></div>
-        <div class="topper-card"><h3>Class 9</h3><p>Rishal</p><span>88%</span></div>
-        <div class="topper-card"><h3>Class 10</h3><p>Riya T</p><span>85%</span></div>
 
-        <!-- Repeated for infinite scroll -->
-        <div class="topper-card"><h3>Class 1</h3><p>Azim Faizan</p><span>100%</span></div>
-        <div class="topper-card"><h3>Class 1</h3><p>Amana Fathima</p><span>100%</span></div>
-        <div class="topper-card"><h3>Class 1</h3><p>Nasha Mehrin</p><span>100%</span></div>
-        <div class="topper-card"><h3>Class 1</h3><p>Ayisha Ridha</p><span>100%</span></div>
-        <div class="topper-card"><h3>Class 1</h3><p>Ayisha Zahra</p><span>100%</span></div>
-        <div class="topper-card"><h3>Class 2</h3><p>Hina Mehrin TK</p><span>97%</span></div>
-        <div class="topper-card"><h3>Class 3</h3><p>Naba Fathima V</p><span>94%</span></div>
-        <div class="topper-card"><h3>Class 4</h3><p>Isha Mehrin AK</p><span>99%</span></div>
-        <div class="topper-card"><h3>Class 5</h3><p>Emin Yash</p><span>88%</span></div>
-        <div class="topper-card"><h3>Class 6</h3><p>Sanha M</p><span>93%</span></div>
-        <div class="topper-card"><h3>Class 7</h3><p>Fidha KT</p><span>86%</span></div>
-        <div class="topper-card"><h3>Class 8</h3><p>Nidha Fathima KP</p><span>82%</span></div>
-        <div class="topper-card"><h3>Class 9</h3><p>Rishal</p><span>88%</span></div>
-        <div class="topper-card"><h3>Class 10</h3><p>Riya T</p><span>85%</span></div>
+        <!-- ⭐ TOPPER CARD TEMPLATE -->
+        <div class="topper-card" data-class="1" data-name="Azim Faizan" data-mark="100%"></div>
+        <div class="topper-card" data-class="1" data-name="Amana Fathima" data-mark="100%"></div>
+        <div class="topper-card" data-class="1" data-name="Nasha Mehrin" data-mark="100%"></div>
+        <div class="topper-card" data-class="1" data-name="Ayisha Ridha" data-mark="100%"></div>
+        <div class="topper-card" data-class="1" data-name="Ayisha Zahra" data-mark="100%"></div>
+        <div class="topper-card" data-class="2" data-name="Hina Mehrin TK" data-mark="97%"></div>
+        <div class="topper-card" data-class="3" data-name="Naba Fathima V" data-mark="94%"></div>
+        <div class="topper-card" data-class="4" data-name="Isha Mehrin AK" data-mark="99%"></div>
+        <div class="topper-card" data-class="5" data-name="Emin Yash" data-mark="88%"></div>
+        <div class="topper-card" data-class="6" data-name="Sanha M" data-mark="93%"></div>
+        <div class="topper-card" data-class="7" data-name="Fidha KT" data-mark="86%"></div>
+        <div class="topper-card" data-class="8" data-name="Nidha Fathima KP" data-mark="82%"></div>
+        <div class="topper-card" data-class="9" data-name="Rishal" data-mark="88%"></div>
+        <div class="topper-card" data-class="10" data-name="Riya T" data-mark="85%"></div>
+
+        <!-- Repeat for infinite smooth scroll -->
       </div>
     </div>
+
   </div>
 
+  <!-- ================= CSS ================ -->
   <style>
-    /* 🌠 Starry Sky Background */
-    .stars, .stars2, .stars3 {
-      position:absolute;
-      top:0; left:0;
-      width:100%; height:100%;
-      background-repeat:repeat;
-      background-position:0 0;
-      z-index:0;
-      opacity:0.7;
-    }
 
-    .stars {
-      background-image: radial-gradient(2px 2px at 20px 30px, #ffffff 50%, transparent 50%);
-      background-size:200px 200px;
-      animation: twinkle 3s infinite ease-in-out, moveStars 60s linear infinite;
-    }
+  /* 🌠 PREMIUM STAR BACKGROUND */
+  .stars, .stars2, .stars3 {
+    position:absolute;
+    top:0; left:0;
+    width:100%; height:100%;
+    background-repeat:repeat;
+    z-index:0;
+    opacity:0.8;
+  }
+  .stars {
+    background-image: radial-gradient(2px 2px at 20px 30px, #fff 60%, transparent 60%);
+    background-size:200px 200px;
+    animation: moveStars 60s linear infinite;
+  }
+  .stars2 {
+    background-image: radial-gradient(2px 2px at 70px 90px, #b7ddff 60%, transparent 60%);
+    background-size:260px 260px;
+    animation: moveStars 120s linear infinite;
+  }
+  .stars3 {
+    background-image: radial-gradient(1px 1px at 120px 160px, #9ac7ff 60%, transparent 60%);
+    background-size:330px 330px;
+    animation: moveStars 180s linear infinite;
+  }
 
-    .stars2 {
-      background-image: radial-gradient(1.5px 1.5px at 60px 80px, #cce6ff 50%, transparent 50%);
-      background-size:250px 250px;
-      animation: twinkle 5s infinite ease-in-out, moveStars 120s linear infinite;
-    }
+  @keyframes moveStars {
+    from {background-position:0 0;}
+    to {background-position:-10000px 5000px;}
+  }
 
-    .stars3 {
-      background-image: radial-gradient(1px 1px at 100px 150px, #99ccff 50%, transparent 50%);
-      background-size:300px 300px;
-      animation: twinkle 7s infinite ease-in-out, moveStars 180s linear infinite;
-    }
+  /* 🔥 Infinite Scroll Track */
+  .topper-scroll { overflow:hidden; }
+  .scroll-track {
+    display:flex;
+    gap:28px;
+    animation:scrollLeft 32s linear infinite;
+    width:max-content;
+  }
+  .topper-scroll:hover .scroll-track {
+    animation-play-state:paused;
+  }
 
-    @keyframes moveStars {
-      from {background-position:0 0;}
-      to {background-position:-10000px 5000px;}
-    }
+  @keyframes scrollLeft {
+    0% { transform:translateX(0); }
+    100% { transform:translateX(-50%); }
+  }
 
-    @keyframes twinkle {
-      0%,100% {opacity:0.7;}
-      50% {opacity:1;}
-    }
+  /* ⭐ PREMIUM TOPPER CARD */
+  .topper-card {
+    width:230px;
+    min-width:230px;
+    padding:28px 20px;
+    text-align:center;
+    border-radius:20px;
+    background:rgba(255,255,255,0.88);
+    backdrop-filter:blur(10px);
+    box-shadow:0 10px 35px rgba(0,74,173,0.25);
+    position:relative;
+    overflow:hidden;
+    transform:translateY(0);
+    animation:float 4s ease-in-out infinite;
+  }
 
-    /* 🌿 Auto Scroll */
-    .topper-scroll { overflow:hidden; position:relative; }
-    .scroll-track { display:flex; gap:22px; animation:scroll-left 35s linear infinite; width:max-content; }
-    .topper-scroll:hover .scroll-track { animation-play-state:paused; }
+  /* ✨ Floating Animation */
+  @keyframes float {
+    0%,100% {transform:translateY(0);}
+    50% {transform:translateY(-10px);}
+  }
 
-    @keyframes scroll-left {
-      0% { transform:translateX(0); }
-      100% { transform:translateX(-50%); }
-    }
+  /* ✨ Neon Glow Border */
+  .topper-card::before {
+    content:"";
+    position:absolute;
+    inset:0;
+    border-radius:20px;
+    padding:2px;
+    background:linear-gradient(140deg,#007bff,#00d0ff,#0066ff,#33ddff);
+    -webkit-mask: 
+      linear-gradient(#fff 0 0) content-box, 
+      linear-gradient(#fff 0 0);
+    -webkit-mask-composite: xor;
+            mask-composite: exclude;
+    animation:borderGlow 4s linear infinite;
+  }
 
-    /* 🏅 Card Style */
-    .topper-card {
-      background:rgba(255,255,255,0.9);
-      backdrop-filter:blur(8px);
-      border-radius:18px;
-      box-shadow:0 6px 25px rgba(0,74,173,0.2);
-      padding:28px 22px;
-      text-align:center;
-      flex:0 0 210px;
-      min-width:210px;
-      transition:0.5s ease;
-      opacity:0;
-      animation:fadeIn 2s ease forwards;
-    }
+  @keyframes borderGlow {
+    0% {filter:hue-rotate(0deg);}
+    100% {filter:hue-rotate(360deg);}
+  }
 
-    .topper-card:nth-child(odd){animation-delay:0.3s;}
-    .topper-card:nth-child(even){animation-delay:0.6s;}
+  /* 👑 Crown Animation */
+  .topper-card::after {
+    content:"👑";
+    position:absolute;
+    top:-30px;
+    left:50%;
+    transform:translateX(-50%) scale(1);
+    font-size:32px;
+    opacity:0;
+    transition:0.5s;
+  }
+  .topper-card:hover::after {
+    top:-10px;
+    opacity:1;
+  }
 
-    @keyframes fadeIn {
-      from{opacity:0; transform:translateY(20px);}
-      to{opacity:1; transform:translateY(0);}
-    }
+  /* CONTENT */
+  .topper-card h3 {
+    font-size:1.3rem;
+    font-weight:700;
+    color:#004aad;
+    margin-bottom:6px;
+  }
 
-    .topper-card:hover {
-      transform:scale(1.08);
-      box-shadow:0 10px 35px rgba(0,74,173,0.3);
-    }
+  .topper-card p {
+    margin:0;
+    font-size:1rem;
+    color:#222;
+    font-weight:500;
+  }
 
-    .topper-card h3 {
-      color:#004aad;
-      font-size:1.2rem;
-      margin-bottom:8px;
-      font-weight:700;
-      letter-spacing:0.5px;
-    }
+  .topper-card span {
+    display:block;
+    font-size:1.2rem;
+    font-weight:700;
+    margin-top:10px;
+    background:linear-gradient(90deg,#0099ff,#33ccff,#00aaff,#0099ff);
+    -webkit-background-clip:text;
+    -webkit-text-fill-color:transparent;
+    animation:shineText 4s infinite linear;
+    background-size:300%;
+  }
 
-    .topper-card p {
-      color:#333;
-      margin:0;
-      font-size:1rem;
-      font-weight:500;
-    }
+  @keyframes shineText {
+    0%{background-position:0%;}
+    100%{background-position:100%;}
+  }
 
-    .topper-card span {
-      display:block;
-      margin-top:10px;
-      font-weight:700;
-      font-size:1.1rem;
-      background:linear-gradient(90deg,#0099ff,#66ccff,#00b3ff,#0099ff);
-      -webkit-background-clip:text;
-      -webkit-text-fill-color:transparent;
-      animation:shimmer 3s infinite linear;
-      background-size:300%;
-    }
+  /* Title Bar Animation */
+  @keyframes shineBar {
+    0% { filter:brightness(1); }
+    50% { filter:brightness(1.6);}
+    100% { filter:brightness(1); }
+  }
 
-    @keyframes shimmer {
-      0%{background-position:0% 50%;}
-      50%{background-position:100% 50%;}
-      100%{background-position:0% 50%;}
-    }
-
-    /* 📱 Responsive */
-    @media(max-width:768px){
-      .topper-card{min-width:250px;padding:30px 20px;}
-      .scroll-track{animation:scroll-left 25s linear infinite;}
-    }
-    @media(max-width:480px){
-      .topper-card{min-width:280px;padding:32px 22px;}
-    }
   </style>
+
+  <!-- 🧩 Auto Fill Card Content -->
+  <script>
+  document.querySelectorAll(".topper-card").forEach(card=>{
+    card.innerHTML = `
+      <h3>Class ${card.dataset.class}</h3>
+      <p>${card.dataset.name}</p>
+      <span>${card.dataset.mark}</span>
+    `;
+  });
+  </script>
+
 </section>
 
-<!-- ===== CSS STYLES ===== -->
-<style>
-.toppers-section {
-  position: relative;
-}
-
-.toppers-bar {
-  display: flex;
-  gap: 1rem;
-  scroll-behavior: smooth;
-}
-
-.topper-card {
-  background: #ffffff;
-  border-radius: 12px;
-  box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-  width: 160px;
-  text-align: center;
-  overflow: hidden;
-  transition: transform 0.3s ease;
-}
-
-.topper-card:hover {
-  transform: translateY(-5px);
-}
-
-.topper-banner {
-  background: #f3c13a;
-  color: #fff;
-  font-weight: 600;
-  padding: 8px 0;
-  font-size: 14px;
-}
-
-.topper-content {
-  padding: 16px 10px;
-}
-
-.topper-content h5 {
-  color: #0b5ed7;
-  font-size: 16px;
-  font-weight: 700;
-}
-
-.topper-content p {
-  margin: 0;
-  color: #444;
-  font-size: 15px;
-}
-</style>
-
-<!-- ABOUT -->
 <!-- ABOUT SECTION -->
 <section id="about" class="about-section py-5">
 
@@ -1759,6 +1755,7 @@
 
 </body>
 </html>
+
 
 
 
