--- a/index.html
+++ b/index.html
@@ -816,7 +816,7 @@
 </script>
 <!-- News Ticker END -->
 
-<!-- 🌟 Class Toppers Section – Premium 2.0 -->
+<!-- 🌟 Class Toppers Section – Premium 2.1 (3D Tilt Hover) -->
 <section id="class-toppers" style="padding:90px 0; background:linear-gradient(145deg,#e8f1ff,#ffffff,#f5f9ff); font-family:'Poppins',sans-serif; overflow:hidden; position:relative;">
 
   <!-- ✨ Enhanced Star Background -->
@@ -827,7 +827,7 @@
   <!-- ✨ Soft Spotlight -->
   <div style="position:absolute; top:-80px; left:50%; width:600px; height:600px; transform:translateX(-50%); background:radial-gradient(circle, rgba(255,255,255,0.7), transparent 70%); filter:blur(40px); z-index:0;"></div>
 
-  <div style="max-width:1150px; margin:auto; text-align:center; position:relative; z-index:2;">
+  <div style="max-width:1300px; margin:auto; text-align:center; position:relative; z-index:2;">
     
     <!-- 🔥 TITLE BAR -->
     <h3 style="
@@ -868,7 +868,22 @@
         <div class="topper-card" data-class="9" data-name="Rishal" data-mark="88%"></div>
         <div class="topper-card" data-class="10" data-name="Riya T" data-mark="85%"></div>
 
-        <!-- Repeat for infinite smooth scroll -->
+        <!-- Duplicate set for seamless loop -->
+        <div class="topper-card" data-class="1" data-name="Azim Faizan" data-mark="100%"></div>
+        <div class="topper-card" data-class="1" data-name="Amana Fathima" data-mark="100%"></div>
+        <div class="topper-card" data-class="1" data-name="Nasha Mehrin" data-mark="100%"></div>
+        <div class="topper-card" data-class="1" data-name="Ayisha Ridha" data-mark="100%"></div>
+        <div class="topper-card" data-class="1" data-name="Ayisha Zahra" data-mark="100%"></div>
+        <div class="topper-card" data-class="2" data-name="Hina Mehrin TK" data-mark="97%"></div>
+        <div class="topper-card" data-class="3" data-name="Naba Fathima V" data-mark="94%"></div>
+        <div class="topper-card" data-class="4" data-name="Isha Mehrin AK" data-mark="99%"></div>
+        <div class="topper-card" data-class="5" data-name="Emin Yash" data-mark="88%"></div>
+        <div class="topper-card" data-class="6" data-name="Sanha M" data-mark="93%"></div>
+        <div class="topper-card" data-class="7" data-name="Fidha KT" data-mark="86%"></div>
+        <div class="topper-card" data-class="8" data-name="Nidha Fathima KP" data-mark="82%"></div>
+        <div class="topper-card" data-class="9" data-name="Rishal" data-mark="88%"></div>
+        <div class="topper-card" data-class="10" data-name="Riya T" data-mark="85%"></div>
+
       </div>
     </div>
 
@@ -876,151 +891,55 @@
 
   <!-- ================= CSS ================ -->
   <style>
-
   /* 🌠 PREMIUM STAR BACKGROUND */
   .stars, .stars2, .stars3 {
-    position:absolute;
-    top:0; left:0;
-    width:100%; height:100%;
-    background-repeat:repeat;
-    z-index:0;
-    opacity:0.8;
+    position:absolute; top:0; left:0; width:100%; height:100%; background-repeat:repeat; z-index:0; opacity:0.8;
   }
-  .stars {
-    background-image: radial-gradient(2px 2px at 20px 30px, #fff 60%, transparent 60%);
-    background-size:200px 200px;
-    animation: moveStars 60s linear infinite;
-  }
-  .stars2 {
-    background-image: radial-gradient(2px 2px at 70px 90px, #b7ddff 60%, transparent 60%);
-    background-size:260px 260px;
-    animation: moveStars 120s linear infinite;
-  }
-  .stars3 {
-    background-image: radial-gradient(1px 1px at 120px 160px, #9ac7ff 60%, transparent 60%);
-    background-size:330px 330px;
-    animation: moveStars 180s linear infinite;
-  }
-
-  @keyframes moveStars {
-    from {background-position:0 0;}
-    to {background-position:-10000px 5000px;}
-  }
+  .stars { background-image: radial-gradient(2px 2px at 20px 30px, #fff 60%, transparent 60%); background-size:200px 200px; animation: moveStars 60s linear infinite; }
+  .stars2 { background-image: radial-gradient(2px 2px at 70px 90px, #b7ddff 60%, transparent 60%); background-size:260px 260px; animation: moveStars 120s linear infinite; }
+  .stars3 { background-image: radial-gradient(1px 1px at 120px 160px, #9ac7ff 60%, transparent 60%); background-size:330px 330px; animation: moveStars 180s linear infinite; }
+  @keyframes moveStars { from {background-position:0 0;} to {background-position:-10000px 5000px;} }
 
   /* 🔥 Infinite Scroll Track */
-  .topper-scroll { overflow:hidden; }
-  .scroll-track {
-    display:flex;
-    gap:28px;
-    animation:scrollLeft 32s linear infinite;
-    width:max-content;
-  }
-  .topper-scroll:hover .scroll-track {
-    animation-play-state:paused;
-  }
-
-  @keyframes scrollLeft {
-    0% { transform:translateX(0); }
-    100% { transform:translateX(-50%); }
-  }
+  .topper-scroll { overflow:hidden; padding: 10px 0; }
+  .scroll-track { display:flex; gap:30px; animation:scrollLeft 18s linear infinite; width:max-content; perspective:1000px; }
+  .topper-scroll:hover .scroll-track { animation-play-state:paused; }
+  @keyframes scrollLeft { 0% { transform:translateX(0); } 100% { transform:translateX(-50%); } }
 
   /* ⭐ PREMIUM TOPPER CARD */
   .topper-card {
-    width:230px;
-    min-width:230px;
-    padding:28px 20px;
-    text-align:center;
-    border-radius:20px;
-    background:rgba(255,255,255,0.88);
-    backdrop-filter:blur(10px);
-    box-shadow:0 10px 35px rgba(0,74,173,0.25);
-    position:relative;
-    overflow:hidden;
-    transform:translateY(0);
-    animation:float 4s ease-in-out infinite;
+    width:260px; min-width:260px; padding:30px 22px; text-align:center; border-radius:20px;
+    background:rgba(255,255,255,0.9); backdrop-filter:blur(12px); box-shadow:0 10px 40px rgba(0,74,173,0.25);
+    position:relative; overflow:hidden; transform:translateY(0); animation:float 4s ease-in-out infinite;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+  }
+
+  /* 3D Tilt Hover Effect */
+  .topper-card:hover {
+    transform: translateY(-10px) rotateX(8deg) rotateY(8deg);
+    box-shadow: 0 25px 60px rgba(0,74,173,0.4);
   }
 
   /* ✨ Floating Animation */
-  @keyframes float {
-    0%,100% {transform:translateY(0);}
-    50% {transform:translateY(-10px);}
-  }
+  @keyframes float { 0%,100% {transform:translateY(0);} 50% {transform:translateY(-10px);} }
 
   /* ✨ Neon Glow Border */
-  .topper-card::before {
-    content:"";
-    position:absolute;
-    inset:0;
-    border-radius:20px;
-    padding:2px;
-    background:linear-gradient(140deg,#007bff,#00d0ff,#0066ff,#33ddff);
-    -webkit-mask: 
-      linear-gradient(#fff 0 0) content-box, 
-      linear-gradient(#fff 0 0);
-    -webkit-mask-composite: xor;
-            mask-composite: exclude;
-    animation:borderGlow 4s linear infinite;
-  }
-
-  @keyframes borderGlow {
-    0% {filter:hue-rotate(0deg);}
-    100% {filter:hue-rotate(360deg);}
-  }
+  .topper-card::before { content:""; position:absolute; inset:0; border-radius:20px; padding:2px; background:linear-gradient(140deg,#007bff,#00d0ff,#0066ff,#33ddff);
+    -webkit-mask: linear-gradient(#fff 0 0) content-box, linear-gradient(#fff 0 0); -webkit-mask-composite: xor; mask-composite: exclude; animation:borderGlow 4s linear infinite; }
+  @keyframes borderGlow { 0% {filter:hue-rotate(0deg);} 100% {filter:hue-rotate(360deg);} }
 
   /* 👑 Crown Animation */
-  .topper-card::after {
-    content:"👑";
-    position:absolute;
-    top:-30px;
-    left:50%;
-    transform:translateX(-50%) scale(1);
-    font-size:32px;
-    opacity:0;
-    transition:0.5s;
-  }
-  .topper-card:hover::after {
-    top:-10px;
-    opacity:1;
-  }
+  .topper-card::after { content:"👑"; position:absolute; top:-30px; left:50%; transform:translateX(-50%); font-size:32px; opacity:0; transition:0.5s; }
+  .topper-card:hover::after { top:-10px; opacity:1; }
 
   /* CONTENT */
-  .topper-card h3 {
-    font-size:1.3rem;
-    font-weight:700;
-    color:#004aad;
-    margin-bottom:6px;
-  }
-
-  .topper-card p {
-    margin:0;
-    font-size:1rem;
-    color:#222;
-    font-weight:500;
-  }
-
-  .topper-card span {
-    display:block;
-    font-size:1.2rem;
-    font-weight:700;
-    margin-top:10px;
-    background:linear-gradient(90deg,#0099ff,#33ccff,#00aaff,#0099ff);
-    -webkit-background-clip:text;
-    -webkit-text-fill-color:transparent;
-    animation:shineText 4s infinite linear;
-    background-size:300%;
-  }
-
-  @keyframes shineText {
-    0%{background-position:0%;}
-    100%{background-position:100%;}
-  }
+  .topper-card h3 { font-size:1.4rem; font-weight:700; color:#004aad; margin-bottom:6px; }
+  .topper-card p { margin:0; font-size:1.05rem; color:#222; font-weight:500; }
+  .topper-card span { display:block; font-size:1.2rem; font-weight:700; margin-top:10px; background:linear-gradient(90deg,#0099ff,#33ccff,#00aaff,#0099ff); -webkit-background-clip:text; -webkit-text-fill-color:transparent; animation:shineText 4s infinite linear; background-size:300%; }
+  @keyframes shineText { 0%{background-position:0%;} 100%{background-position:100%;} }
 
   /* Title Bar Animation */
-  @keyframes shineBar {
-    0% { filter:brightness(1); }
-    50% { filter:brightness(1.6);}
-    100% { filter:brightness(1); }
-  }
+  @keyframes shineBar { 0% { filter:brightness(1); } 50% { filter:brightness(1.6);} 100% { filter:brightness(1); } }
 
   </style>
 
@@ -1036,6 +955,7 @@
   </script>
 
 </section>
+
 
 <!-- ABOUT SECTION -->
 <section id="about" class="about-section py-5">
@@ -1755,6 +1675,7 @@
 
 </body>
 </html>
+
 
 
 
