--- a/index.html
+++ b/index.html
@@ -816,7 +816,7 @@
 </script>
 <!-- News Ticker END -->
 
-<!-- 🌟 Class Toppers Section – Premium 2.1 (3D Tilt Hover) -->
+<!-- 🌟 Class Toppers Section – Premium 3.0 (Dynamic 3D Tilt) -->
 <section id="class-toppers" style="padding:90px 0; background:linear-gradient(145deg,#e8f1ff,#ffffff,#f5f9ff); font-family:'Poppins',sans-serif; overflow:hidden; position:relative;">
 
   <!-- ✨ Enhanced Star Background -->
@@ -830,29 +830,17 @@
   <div style="max-width:1300px; margin:auto; text-align:center; position:relative; z-index:2;">
     
     <!-- 🔥 TITLE BAR -->
-    <h3 style="
-      font-size:2.2rem; 
-      font-weight:700; 
-      color:#004aad; 
-      margin-bottom:25px; 
-      position:relative;">
+    <h3 style="font-size:2.2rem; font-weight:700; color:#004aad; margin-bottom:25px; position:relative;">
       Class Toppers – Half Yearly Examination 2025–26
     </h3>
 
-    <div style="
-      width:180px;
-      height:6px;
-      margin:0 auto 50px;
-      background:linear-gradient(90deg,#004aad,#0099ff,#66ccff,#004aad);
-      border-radius:50px;
-      animation:shineBar 4s infinite linear;
-    "></div>
+    <div style="width:180px; height:6px; margin:0 auto 50px; background:linear-gradient(90deg,#004aad,#0099ff,#66ccff,#004aad); border-radius:50px; animation:shineBar 4s infinite linear;"></div>
 
     <!-- 🔥 Infinite Scroll -->
     <div class="topper-scroll">
       <div class="scroll-track">
 
-        <!-- ⭐ TOPPER CARD TEMPLATE -->
+        <!-- ⭐ TOPPER CARDS -->
         <div class="topper-card" data-class="1" data-name="Azim Faizan" data-mark="100%"></div>
         <div class="topper-card" data-class="1" data-name="Amana Fathima" data-mark="100%"></div>
         <div class="topper-card" data-class="1" data-name="Nasha Mehrin" data-mark="100%"></div>
@@ -868,7 +856,7 @@
         <div class="topper-card" data-class="9" data-name="Rishal" data-mark="88%"></div>
         <div class="topper-card" data-class="10" data-name="Riya T" data-mark="85%"></div>
 
-        <!-- Duplicate set for seamless loop -->
+        <!-- Duplicate for seamless scroll -->
         <div class="topper-card" data-class="1" data-name="Azim Faizan" data-mark="100%"></div>
         <div class="topper-card" data-class="1" data-name="Amana Fathima" data-mark="100%"></div>
         <div class="topper-card" data-class="1" data-name="Nasha Mehrin" data-mark="100%"></div>
@@ -891,18 +879,16 @@
 
   <!-- ================= CSS ================ -->
   <style>
-  /* 🌠 PREMIUM STAR BACKGROUND */
-  .stars, .stars2, .stars3 {
-    position:absolute; top:0; left:0; width:100%; height:100%; background-repeat:repeat; z-index:0; opacity:0.8;
-  }
+  /* 🌠 STAR BACKGROUND */
+  .stars, .stars2, .stars3 { position:absolute; top:0; left:0; width:100%; height:100%; background-repeat:repeat; z-index:0; opacity:0.8; }
   .stars { background-image: radial-gradient(2px 2px at 20px 30px, #fff 60%, transparent 60%); background-size:200px 200px; animation: moveStars 60s linear infinite; }
   .stars2 { background-image: radial-gradient(2px 2px at 70px 90px, #b7ddff 60%, transparent 60%); background-size:260px 260px; animation: moveStars 120s linear infinite; }
   .stars3 { background-image: radial-gradient(1px 1px at 120px 160px, #9ac7ff 60%, transparent 60%); background-size:330px 330px; animation: moveStars 180s linear infinite; }
   @keyframes moveStars { from {background-position:0 0;} to {background-position:-10000px 5000px;} }
 
-  /* 🔥 Infinite Scroll Track */
+  /* 🔥 Infinite Scroll Track (slightly slower) */
   .topper-scroll { overflow:hidden; padding: 10px 0; }
-  .scroll-track { display:flex; gap:30px; animation:scrollLeft 18s linear infinite; width:max-content; perspective:1000px; }
+  .scroll-track { display:flex; gap:30px; animation:scrollLeft 28s linear infinite; width:max-content; perspective:1200px; }
   .topper-scroll:hover .scroll-track { animation-play-state:paused; }
   @keyframes scrollLeft { 0% { transform:translateX(0); } 100% { transform:translateX(-50%); } }
 
@@ -910,29 +896,23 @@
   .topper-card {
     width:260px; min-width:260px; padding:30px 22px; text-align:center; border-radius:20px;
     background:rgba(255,255,255,0.9); backdrop-filter:blur(12px); box-shadow:0 10px 40px rgba(0,74,173,0.25);
-    position:relative; overflow:hidden; transform:translateY(0); animation:float 4s ease-in-out infinite;
-    transition: transform 0.3s ease, box-shadow 0.3s ease;
+    position:relative; overflow:hidden; transform-style: preserve-3d; transition: transform 0.3s ease, box-shadow 0.3s ease;
   }
 
-  /* 3D Tilt Hover Effect */
-  .topper-card:hover {
-    transform: translateY(-10px) rotateX(8deg) rotateY(8deg);
-    box-shadow: 0 25px 60px rgba(0,74,173,0.4);
-  }
-
-  /* ✨ Floating Animation */
+  /* Float animation */
   @keyframes float { 0%,100% {transform:translateY(0);} 50% {transform:translateY(-10px);} }
+  .topper-card { animation:float 4s ease-in-out infinite; }
 
-  /* ✨ Neon Glow Border */
+  /* Neon Glow Border */
   .topper-card::before { content:""; position:absolute; inset:0; border-radius:20px; padding:2px; background:linear-gradient(140deg,#007bff,#00d0ff,#0066ff,#33ddff);
     -webkit-mask: linear-gradient(#fff 0 0) content-box, linear-gradient(#fff 0 0); -webkit-mask-composite: xor; mask-composite: exclude; animation:borderGlow 4s linear infinite; }
   @keyframes borderGlow { 0% {filter:hue-rotate(0deg);} 100% {filter:hue-rotate(360deg);} }
 
-  /* 👑 Crown Animation */
+  /* Crown */
   .topper-card::after { content:"👑"; position:absolute; top:-30px; left:50%; transform:translateX(-50%); font-size:32px; opacity:0; transition:0.5s; }
   .topper-card:hover::after { top:-10px; opacity:1; }
 
-  /* CONTENT */
+  /* Content */
   .topper-card h3 { font-size:1.4rem; font-weight:700; color:#004aad; margin-bottom:6px; }
   .topper-card p { margin:0; font-size:1.05rem; color:#222; font-weight:500; }
   .topper-card span { display:block; font-size:1.2rem; font-weight:700; margin-top:10px; background:linear-gradient(90deg,#0099ff,#33ccff,#00aaff,#0099ff); -webkit-background-clip:text; -webkit-text-fill-color:transparent; animation:shineText 4s infinite linear; background-size:300%; }
@@ -943,8 +923,9 @@
 
   </style>
 
-  <!-- 🧩 Auto Fill Card Content -->
+  <!-- 🧩 Auto Fill Card Content + Dynamic 3D Tilt -->
   <script>
+  // Auto-fill card content
   document.querySelectorAll(".topper-card").forEach(card=>{
     card.innerHTML = `
       <h3>Class ${card.dataset.class}</h3>
@@ -952,10 +933,28 @@
       <span>${card.dataset.mark}</span>
     `;
   });
+
+  // Dynamic 3D tilt
+  document.querySelectorAll('.topper-card').forEach(card => {
+    card.addEventListener('mousemove', e => {
+      const rect = card.getBoundingClientRect();
+      const x = e.clientX - rect.left;
+      const y = e.clientY - rect.top;
+      const cx = rect.width/2;
+      const cy = rect.height/2;
+      const dx = (x - cx) / cx; // -1 to 1
+      const dy = (y - cy) / cy;
+      card.style.transform = `rotateY(${dx*10}deg) rotateX(${-dy*10}deg) translateZ(0)`;
+      card.style.boxShadow = `${-dx*15}px ${dy*15}px 40px rgba(0,74,173,0.4)`;
+    });
+    card.addEventListener('mouseleave', () => {
+      card.style.transform = 'rotateY(0deg) rotateX(0deg)';
+      card.style.boxShadow = '0 10px 40px rgba(0,74,173,0.25)';
+    });
+  });
   </script>
 
 </section>
-
 
 <!-- ABOUT SECTION -->
 <section id="about" class="about-section py-5">
@@ -1675,6 +1674,7 @@
 
 </body>
 </html>
+
 
 
 
